name: billeksah-menu
version: 1.0.0
cabal-version: >= 1.8
build-type: Simple
license: GPL
license-file: LICENSE
copyright: Juergen "jutaro" Nicklisch-Franken
maintainer: maintainer@leksah.org
homepage: http://www.leksah.org>
package-url: https://github.com/leksah
bug-reports: http://code.google.com/p/leksah/issues/list
synopsis: Leksah library
description: Menu library
category: Graphics
author: Juergen "jutaro" Nicklisch-Franken
tested-with: GHC ==7.0


Library
    exposed-modules:
        Graphics.Menu
    exposed: True
    buildable: True
    hs-source-dirs: src
    build-depends:
        base >=4.0.0.0 && <4.4,
        containers >=0.2 && <0.5,
        mtl >=1.1.0.2 && <2.1,
        transformers >= 0.2.2.0 && < 0.3,
        directory >= 1.1.0.0 && <1.2,
        filepath >= 1.2.0.0 && < 1.3,
        gtk >= 0.12.0 && < 0.13,
        glib >= 0.12.0 && < 0.13,

        billeksah-services >= 1.0.0 && < 1.1
